docker_deploy/kubernetes-stellan/examples/john2x-opentaproject-com/yamls-staging/06b-ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: opentaproject-com-ingress
  namespace: opentaproject-com
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: opentaproject.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wildcard-demo
              servicePort: http
    - host: "*.opentaproject.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: wildcard-demo
              servicePort: http
  tls:
    - secretName: opentaproject-com-staging-tls
      hosts:
        - opentaproject.com
        - "*.opentaproject.com"
